--- a/bakeli-tontine/src/App.css
+++ b/bakeli-tontine/src/App.css
@@ -1,42 +1,423 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+
+.App {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-@keyframes logo-spin {
+body{
+  background-color: rgb(223, 233, 238);
+}
+.card{
+  background-color:rgb(20, 212, 132);
+  width:338px;
+  height: 150px;
+  border-radius: 10px;
+  color: white;
+  border: none;
+}
+.ban1{
+  font-size: 21px;
+  color: red;
+}
+.card2:hover{
+  background-color:rgb(20, 212, 132);
+}
+.modal-content{
+  height: 520px;
+  width: 600px;
+}
+.card:hover{
+  background-color:white;
+  color: hsl(216, 45%, 29%);
+}
+
+
+.card2{
+  width:280px;
+  height: 120px;
+  border-radius: 6px;
+}
+
+.card-h5{
+  color: hwb(220 4% 86% / 0.909);
+  font-size: 19px;
+
+}
+.h5{
+  font-size: 19px;
+  font-weight: 400;
+}
+.h4{
+  position: relative;
+  bottom: 10px;
+}
+.card-h4{
+  color: hwb(216 10% 76%);
+  position: relative;
+  bottom: 10px;
+
+}
+.form-label{
+  font-size: 14px;
+  color:hsl(213, 12%, 19%);
+  font-weight: bold;
+}
+.form-control{
+  border-color: hsl(216, 45%, 29%);
+}
+
+.card {
+  background-color:rgb(20, 212, 132);
+
+}
+
+.icône{
+  font-size: 17px;
+}
+.add{
+    width: 230px;
+    color: hsl(216, 45%, 29%);
+    background-color:rgb(20, 212, 132);
+    border: none;
+    border-radius: 6px;
+    font-weight: bold;
+    position: relative;
+    bottom: 90px;
+  }
+.add2{
+   background-color: hsl(215, 49%, 14%);
+   border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    width: 140px;
+    position: relative;
+    right: 260px;
+    top:13px;
+    font-size: 20px;
+    padding:11px;
+    
+
+}
+.modal-h2{
+  color: hsl(216, 45%, 29%);
+}
+.col{
+  position: relative;
+  bottom: 18px;
+}
+.lol{
+  position: relative;
+  bottom: 10px;
+}
+  .non{
+    margin: 0 auto;
+    width: fit-content; 
+    width: 70%;
+    padding: 14px;
+    border-radius: 6px;
+    background-color:rgb(20, 212, 132);
+
+}
+tbody{
+  position: relative;
+  top: 6px;
+  height: 300px;
+}
+table{
+  margin: 0 auto;
+  width:69%;
+  height: 300px;
+  /* position: relative;
+  bottom: 30px; */
+
+}
+thead {
+  background-color: rgb(20, 212, 132); 
+  height: 70px;
+
+}
+td{
+  color: hsl(216, 45%, 29%);
+  font-size:13px;
+}
+th{
+  color: hsl(216, 45%, 29%);
+}
+
+.progress{
+  height: 5px;
+  width: 130px;
+  position: relative;
+  bottom: 2px;
+  
+}
+span{
+  position: relative;
+  bottom: 7px;
+}
+
+.progress-bar{
+  background-color: rgb(20, 212, 132); 
+
+}
+
+.progress-bar1{
+  background-color: hsl(216, 45%, 29%) ; 
+
+}
+
+
+
+.progress-bar2{
+  background-color: hsl(216, 45%, 29%) ; 
+}
+
+.progress-bar3{
+  background-color: hsl(216, 45%, 29%) ; 
+}
+
+
+.modal-header{
+  background-color: rgb(20, 212, 132); 
+ width: 100%;
+}
+.h3{
+  color: hsl(216, 45%, 29%); 
+}
+.span{
+  position: relative;
+  left: 51px;
+}
+.modal-body thead{
+  background-color: hsl(216, 45%, 29%);
+  height:10px;
+}
+.modal-body th{
+  color: white;
+
+}
+
+.modal-body table {
+      width: 547px;
+      position: relative;
+      top: 2px;
+}
+
+.tr{
+  background-color:#e3d9d9f5;
+}
+
+
+.tr1{
+  background-color:#e3d9d9f5;
+  position: relative;
+  top: 4px;
+}
+.tr2{
+  background-color:#e3d9d9f5;
+  position: relative;
+  top: 8px;
+}
+.tr3{
+  background-color:#e3d9d9f5;
+  position: relative;
+  top: 12px;
+}
+.tr4{
+  background-color:#e3d9d9f5;
+  position: relative;
+  top: 16px;
+}
+.tr5{
+  background-color:#e3d9d9f5;
+  position: relative;
+  top: 20px;
+}
+.tr6{
+  background-color:#e3d9d9f5;
+  position: relative;
+  top: 24px;
+}
+
+.bef {
+  width: 6px;
+  height: 120px;
+  background-color:#e3d9d9f5;
+  position: relative;
+  bottom: 340px;
+  left: 8px;
+}
+
+
+.modal-content{
+  height:620px;
+}
+.total{
+  position: relative;
+  right: 25px;
+  bottom: 80px;
+  color: rgb(20, 212, 132);
+}
+.total2{
+  position: relative;
+  right: 25px;
+  bottom: 90px;
+  color: hsl(216, 45%, 29%);
+}
+
+.file:hover{
+  color: red;
+}
+.arrow-file:hover{
+  color: rgb(20, 212, 132);
+
+}
+.file,.arrow-file{
+  position: relative;
+  bottom: 3px;
+  color: black;
+  font-size: 21px;
+
+}
+.icon{
+  position: relative;
+  left: 30px;
+}
+/* .archive{
+   position: relative;
+  bottom: 3px;
+  color: black;
+  font-size: 21px;
+
+} */
+.eye{
+  font-size: 21px;
+}
+
+.statut1,.statut3{
+  color: rgb(20, 212, 132);
+  font-size: 19px;
+font-weight: bold;
+position: relative;
+bottom: 10px;
+left: 20px;
+
+
+}
+.statut2,.statut4,.statut5,.statut6{
+  color: hwb(217 26% 65%);
+  font-size: 19px;
+  font-weight: bold;
+ position: relative;
+bottom: 10px;
+left: 20px;
+
+
+}
+.th1{
+  font-size: 21px;
+  color: hwb(216 10% 76%);
+}
+.td1{
+  font-size: 18px;
+  color: hwb(216 12% 76%);
+  padding: 12px;
+
+}
+.statut7{
+  font-size: 15px;
+  position: relative;
+  left: 20px;
+}
+.file2{
+  position: relative;
+  top: 4px;
+  color: black;
+
+  
+}
+.fa-regular{
+  color: black;
+  position: relative;
+  bottom: 2px;
+
+
+}
+.statut8,.statut9{
+  font-size: 15px;
+}
+.statut8{
+  color: rgb(20, 212, 132);
+  font-weight: bold;
+}
+
+.pro{
+  position: relative;
+  bottom:12px;
+}
+.page{
+  position: relative;
+  right: 20px;
+}
+.page-item1{
+  background-color: rgb(20, 212, 132);
+  color: black;
+  font-weight: bold;
+  width:30px;
+  height: 30px;
+  border-radius: 30px;
+  text-align: center;
+}
+
+.page-item{
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  width:30px;
+  height: 30px;
+  border-radius: 30px;
+  text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
