--- a/bakeli-tontine/src/App.css
+++ b/bakeli-tontine/src/App.css
@@ -23,14 +23,14 @@ body {
   height: 90px;
 }
 
-.test {
+/* .test {
   height: 130px !important;
   width: 350px;
 }
 
 .teste {
   width: 450px !important;
-}
+} */
 
 .progress {
   height: 8px !important;
