--- a/bakeli-tontine/src/Component/Tableau.css
+++ b/bakeli-tontine/src/Component/Tableau.css
@@ -3,8 +3,10 @@
     padding: 16px;
     position: relative;
     top: 10px;
+    height: 56px;
     
 }
+
 .table thead .entete tr{
 
     border-top-left-radius: 10px;
