--- a/bakeli-tontine/src/App.css
+++ b/bakeli-tontine/src/App.css
@@ -1,9 +1,9 @@
 #root {
-  /* max-width: 1280px; */
+  max-width: 1280px;
   margin: 0 auto;
   text-align: center;
-  /* padding: 2rem; */
-    width: 100%;
+  padding: 2rem;
+    /* width: 100%; */
 }
 
 .logo {
