--- a/bakeli-tontine/src/Styles/archives.css
+++ b/bakeli-tontine/src/Styles/archives.css
@@ -19,3 +19,11 @@ h1 {
 }
 
 /* #20DF7F */
+
+#root {
+    /* max-width: 1280px; */
+    margin: 0 auto;
+    text-align: center;
+    padding: 0;
+    width: 100%;
+}
