--- a/bakeli-tontine/src/styles/Card.css
+++ b/bakeli-tontine/src/styles/Card.css
@@ -3,12 +3,23 @@ body {
     background-color: #D2D2D2;
   }
   
-  .card {
+  .carte {
     background-color: #20DF7F;
     width: 338px;
     height: 150px;
     border-radius: 10px;
     color: white;
+    border: none;
+  }
+  .carte:hover{
+    background-color:white;
+    color: #093545;
+   
+  }
+  .carte2 {
+    width: 338px;
+    height: 150px;
+    border-radius: 10px;
     border: none;
   }
   
@@ -17,21 +28,12 @@ body {
     color: red;
   }
   
-  .card2:hover {
-    background-color: #20DF7F;
-  }
   
   .modal-content {
     height: 520px;
     width: 600px;
   }
-  
-  .card:focus {
-    background-color: white;
-    color: #093545;
-  }
-  
-  
+    
   .card2 {
     width: 280px;
     height: 120px;
@@ -101,13 +103,7 @@ body {
     top: 13px;
     font-size: 20px;
     padding: 11px;
-  
-  
   }
-  
-  
-  
-  
   .lol {
     position: relative;
     bottom: 10px;
