--- a/bakeli-tontine/src/styles/Card.css
+++ b/bakeli-tontine/src/styles/Card.css
@@ -69,7 +69,7 @@ body {
     font-weight: bold;
   }
   
-  .form-control {
+  .form-control  {
     border: 1px solid rgb(43, 86, 102);
     height: 45px;
     width:320px;
@@ -125,16 +125,17 @@ body {
     height: 300px;
   }
   
-  table {
+ .tab{
     margin: 0 auto;
     width: 69%;
     height: 300px;
   
   }
   
-  thead {
+  .tab {
     background-color: #20DF7F;
     height: 70px;
+    border-radius: 20px;
   
   }
   
@@ -187,22 +188,22 @@ body {
     color: #093545;
   }
   
-  .span {
+  .des {
     position: relative;
     left: 51px;
   }
   
-  .modal-body thead {
+  .modal-body .cabeza{
     background-color: #093545;
     height: 10px;
   }
   
-  .modal-body th {
+  .modal-body .month {
     color: white;
   
   }
   
-  .modal-body table {
+  .modal-body .tablea {
     width: 547px;
     position: relative;
     top: 2px;
@@ -360,11 +361,18 @@ body {
   
   .tabla {
     width: 800px;
+    background-color: #20DF7F;
     height: 400px;
+    border-radius: 20px;
+
   }
   
   .tabla1 {
     width: 1000px;
+    background-color: #20DF7F;
+    border-radius: 20px;
+
+
   }
   
   .eye1 {
@@ -377,10 +385,7 @@ body {
   .fa-regular {
     color: black;
     position: relative;
-    bottom: 2px;
-  
-  
-  
+    bottom: 2px;  
   }
   
   .statut8,
@@ -428,7 +433,6 @@ body {
     width:885px;
     line-height: 50px;
     border-radius: 15px;
-    /* padding: 20px; */
     position: relative;
     right: 200px;
     height: 760px;
